packages/tensorkube/tensorkube-0.1.4.tar.gz/tensorkube-0.1.4/src/tensorkube/configurations/build_configs/istio_virtualservice_domain.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: <virtualservicename>
  namespace: <virtual-service-namespace>
spec:
  hosts:
  - <sub-domain>
  gateways:
  - <gateway-namespace>/<gateway-name>
  http:
  - match:
    - uri:
        prefix: "/"
      authority:
        prefix: <sub-domain>
    rewrite:
      authority: <service-name>.<namespace>.svc.cluster.local
    route:
    - destination:
        host: <service-name>.<namespace>.svc.cluster.local
        port:
          number: 80
