packages/tensorkube/tensorkube-0.1.4.tar.gz/tensorkube-0.1.4/src/tensorkube/configurations/build_configs/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: <svc_name-subpath-ingress>
  namespace: <namespace>
spec:
  hosts:
  - <AWS_ELB_URL>
  gateways:
  - knative-serving/knative-ingress-gateway
  http:
  - match:
    - uri:
        prefix: </svc/namespace/svc_name>
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knative-local-gateway.istio-system.svc.cluster.local
      headers:
        request:
          set:
            Host: <svc_name>.<namespace>.svc.cluster.local
